tests/lookup/lookup.exp
es3_class.js:5
  5: (a.p: string); // installs shadow prop on A.prototype
      ^^^ number. This type is incompatible with
  5: (a.p: string); // installs shadow prop on A.prototype
           ^^^^^^ string

es3_class.js:16
 16: b.m();
     ^^^^^ call of method `m`
 14:   (this.p: string); // error: incompatible read hits shadow prop
        ^^^^^^ number. This type is incompatible with
 14:   (this.p: string); // error: incompatible read hits shadow prop
                ^^^^^^ string

es3_class.js:31
 31: (d1.p: void); // error, number ~> void (*not* string ~> void)
      ^^^^ number. This type is incompatible with
 31: (d1.p: void); // error, number ~> void (*not* string ~> void)
            ^^^^ undefined

es3_class.js:32
 32: (d2.p: void); // error, string ~> void (*not* number ~> void)
      ^^^^ string. This type is incompatible with
 32: (d2.p: void); // error, string ~> void (*not* number ~> void)
            ^^^^ undefined

es3_class.js:37
 37: E.prototype.p = 0;
                     ^ number. This type is incompatible with
 38: var e: {p: string} = new E; // error, number ~> string
                ^^^^^^ string

es3_class.js:41
 41: var f: {p: string} = new F; // error, `p` not found on `F.prototype` (yet)
            ^^^^^^^^^^^ property `p`. Property not found in
 41: var f: {p: string} = new F; // error, `p` not found on `F.prototype` (yet)
                          ^^^^^ new object

es3_class.js:42
 42: F.prototype.p = 0; // error: number ~> string (eventually)
                     ^ number. This type is incompatible with
 41: var f: {p: string} = new F; // error, `p` not found on `F.prototype` (yet)
                ^^^^^^ string

proto.js:5
  5: (a.p: string); // installs shadow prop on a_proto
      ^^^ number. This type is incompatible with
  5: (a.p: string); // installs shadow prop on a_proto
           ^^^^^^ string

proto.js:16
 16: b.m();
     ^^^^^ call of method `m`
 14:   (this.p: string); // error: incompatible read hits shadow prop
        ^^^^^^ number. This type is incompatible with
 14:   (this.p: string); // error: incompatible read hits shadow prop
                ^^^^^^ string

proto.js:31
 31: (d1.p: void); // error, number ~> void (*not* string ~> void)
      ^^^^ number. This type is incompatible with
 31: (d1.p: void); // error, number ~> void (*not* string ~> void)
            ^^^^ undefined

proto.js:32
 32: (d2.p: void); // error, string ~> void (*not* number ~> void)
      ^^^^ string. This type is incompatible with
 32: (d2.p: void); // error, string ~> void (*not* number ~> void)
            ^^^^ undefined

proto.js:37
 37: e_proto.p = 0;
                 ^ number. This type is incompatible with
 38: var e: {p: string} = Object.create(e_proto); // error, number ~> string
                ^^^^^^ string

proto.js:41
 41: var f: {p: string} = Object.create(f_proto); // error, `p` not found (yet)
            ^^^^^^^^^^^ property `p`. Property not found in
 41: var f: {p: string} = Object.create(f_proto); // error, `p` not found (yet)
                          ^^^^^^^^^^^^^^^^^^^^^^ Object.create

proto.js:42
 42: f_proto.p = 0; // error: number ~> string (eventually)
                 ^ number. This type is incompatible with
 41: var f: {p: string} = Object.create(f_proto); // error, `p` not found (yet)
                ^^^^^^ string


Found 14 errors
